--- a/views/index.pug
+++ b/views/index.pug
@@ -6,14 +6,17 @@ html
 		title= title
 		link(href='style.css' rel='stylesheet'
 		type='text/css')
+		script
+			include ../mongodbops.js
 	body(class='flex-container')
-		DIV
-			SPAN(class='dbstatus-success') Database Status
-			// SPAN(class='dbstatus', id='dbstatus_id') #{dbStatus}
+		DIV(class='dbstatus-parent')
+			DIV(class='dbstatus-success') Database Status
 			if dbStatus == 'pingfailed'
-				SPAN(class='dbstatus-failed') #{dbStatus}
+				DIV(class='dbstatus-failed') #{dbStatus}
 			else
-				SPAN(class='dbstatus-success') #{dbStatus}
+				DIV(class='dbstatus-success') #{dbStatus}
+		DIV
+			BUTTON(class='dbcheck', type='button', onclick="fetch('/dbstatus').then(response => response.json()).then(data => alert(JSON.stringify(data)));") Check
 		DIV
 			H1(class='h1_class') #{message}
 		DIV
