Added login, route and pug change.

--- a/views/login.pug
+++ b/views/login.pug
@@ -20,7 +20,7 @@ html
 		DIV
 			H1(class='h1_class') #{message}
 		DIV
-			form(action='/' method='post')
+			form(action='/login' method='post')
 				label(
 					for='username'
 					class='home-label'
