Got some of passport working.

--- a/views/login.pug
+++ b/views/login.pug
@@ -32,11 +32,11 @@ html
 				br()
 				br()
 				label(
-					for='passwd'
+					for='password'
 					class='home-label'
 				) 	Enter Password
 				input(
-					type='text'
+					type='password'
 					name='password'
 				)
 				br()
