--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,13 @@
 	background-color: blueviolet;
 	color: gray;
 }
+
+#footer_id {
+	border: solid 3px greenyellow;
+	border-radius: 6px;
+	padding: 5px;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin: 5px;
+	display: inline-block;
+}
