Working on modlimited

--- a/views/limitedadd.pug
+++ b/views/limitedadd.pug
@@ -41,7 +41,7 @@ html
 				)
 				br()
 				br()
-				multiple-timerange(id="multipletimerange_id"
+				multiple-timerange(id="multipletimerange_id" name="timerange1"
 				) MT1
 				label(
 					for='dayofweek'
