Use startTime, not timeStart.  Otherwise, subdoc won't populate.

--- a/views/limitedadd.pug
+++ b/views/limitedadd.pug
@@ -61,12 +61,32 @@ html
 				br()
 				br()
 				label(
-					for='bytimetotal'
+					for='byTimeTotal'
 					class='home-label'
 				) Time Total
 				input(
 					type="text"
-					name="bytimetotal"
+					name="byTimeTotal"
+				)
+				br()
+				br()
+				label(
+					for='byNumberFilesToUpload'
+					class='home-label'
+				) Number Files Upload
+				input(
+					type="text"
+					name="byNumberFilesToUpload"
+				)
+				br()
+				br()
+				label(
+					for='byNumberBadLogins'
+					class='home-label'
+				) Number Bad Logins
+				input(
+					type="text"
+					name="byNumberBadLogins"
 				)
 				br()
 				br()
