RByczko;2021-06-08; Improved fetch call.

--- a/views/userdelete.pug
+++ b/views/userdelete.pug
@@ -12,6 +12,8 @@ html
 			include ../bro_bundle2.js
 		script
 			include ../bro_temp.js
+		script
+			include ../fetch.js
 	body(class='flex-container')
 		DIV(class='dbstatus-parent')
 			DIV(class='dbstatus-success') Database Status
@@ -62,8 +64,8 @@ html
 						alert("From runAlert");
 					}
 				script.
-					async function fetchDelete(users_id) {
-						alert("fetchDelete: start1");
+					async function fetchDeleteNotUsed(users_id) {
+						alert("fetchDeleteNotUsed: start1");
 						try {
 						let url = '/users';
 						let data = {
@@ -77,22 +79,9 @@ html
 							},
 							body: JSON.stringify(data)
 						}
-						let retFetch = await fetch(url, opt);
-						alert("retFetch="+retFetch);
-						alert("retFetch.headers="+retFetch.headers);
-						let i = 0;
-						for (var pair of retFetch.headers.entries()){
-							alert("pair0, pair1="+pair[0]+":"+pair[1]);
-							i++;
-							if (i==5) {
-								break;
-							}
-						}
-						alert("retFetch.body="+retFetch.body);
-						let bd = await retFetch.body.json();
-						alert("retFetch.body.json()="+bd);
-						alert("retFetch.status="+retFetch.status);
-						alert("JS(retFetch)="+JSON.stringify(retFetch));
+						let response = await fetch(url, opt);
+						await alertFetchResponse(response);
+
 						} catch (e) {
 							alert("fetchDelete caught");
 						}
