--- a/views/userdelete.pug
+++ b/views/userdelete.pug
@@ -6,14 +6,18 @@ html
 		title= title
 		link(href='style.css' rel='stylesheet'
 		type='text/css')
+		//- script
+			//- import {fetchDelete, alertFetchResponse} from "../fetch";
 		script
 			include ../mongodbops.js
-		script
-			include ../bro_bundle2.js
+		//-script
+		//-	include ../bro_bundle2.js
 		script
 			include ../bro_temp.js
-		script
-			include ../fetch.js
+		//- script(src='../fetch_ecmascriptmodule.js' type='module' defer)
+		//-script(type="module")
+		//-	include ../fetch_base.js
+		script(type="module" src="../fetch_ecmascriptmodule.js")
 	body(class='flex-container')
 		DIV(class='dbstatus-parent')
 			DIV(class='dbstatus-success') Database Status
@@ -64,6 +68,8 @@ html
 						alert("From runAlert");
 					}
 				script.
+					//- import {fetchDelete, alertFetchResponse} from "../fetch";
+
 					async function fetchDeleteNotUsed(users_id) {
 						alert("fetchDeleteNotUsed: start1");
 						try {
@@ -101,7 +107,7 @@ html
 						} else {
 							alert("fetch does not exist");
 						}
-						let response_delete = await fetchDelete(val);
+						let response_delete = await fetchDelete(val, validateDelete);
 						e.stopPropagation();
 						// e.preventDefault();
 						alert("getUserAll: before");
@@ -115,3 +121,4 @@ html
 						alert("After response_userall.json()");
 					}
 					document.querySelector('#id_input').addEventListener('click', onInputClick);
+		// script(src='../fetch_ecmascriptmodule.js' type='module')
