RByczko;2021-07-12; Resolve issue of finding style.css and js module files.

--- a/views/userdelete.pug
+++ b/views/userdelete.pug
@@ -9,18 +9,16 @@
 	2021-07-09, RByczko, Incorporated idInUserAll.  Some code cleanup.
 	2021-07-11, RByczko, Added body onload function, userdelete_body_onload,
 	to inject options into select. Changed for attribute in label for select.
+	2021-07-12, RByczko, Removed script for mongodbops.js.  Changed link
+	for style.css. Removed some clutter.
 html
 	head
 		meta(
 			name="viewport" content="width=device-width, initial-scale=1.0"
 		)
 		title= title
-		link(href='style.css' rel='stylesheet'
+		link(href='/style.css' rel='stylesheet'
 		type='text/css')
-		script
-			include ../mongodbops.js
-		//-script
-		//-	include ../bro_bundle2.js
 
 		//- script(src='../fetch_ecmascriptmodule.js' type='module' defer)
 		//-script(type="module")
